@@ -2,6 +2,7 @@
 
 * Orbital: Allow AVS parts to be sent sans country [duff]
 * SecureNet: Return the right error message for declines [duff]
+* Moneris: Add verify [anellis]
 
 
 == Version 1.58.0 (March 1, 2016)
